# telegram-bot-center

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  index.html  install.sh  metadata.json  package-lock.json  package.json  server.ts  uninstall.sh
scripts/: package-release.sh
src/: App.tsx  db.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BotManager.tsx  ChatManager.tsx  Header.tsx  LogView.tsx  MessageSender.tsx  MessageTemplatesManager.tsx  RoutesManager.tsx  SettingsView.tsx  Sidebar.tsx  UpdateManager.tsx  WebhookTester.tsx
