[package]
name = "telegram-bot-center"
version = "0.1.0"
description = "Telegram Bot Center"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
